objects/cterminal__Terminal_Payment__c.object
<CustomObject>
    <fields>
        <fullName>cterminal__Acquirer__c</fullName>
        <label>Acquirer</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Action__c</fullName>
        <label>Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Business_Id__c</fullName>
        <description>The Business Id Associated with this transaction</description>
        <label>Business Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Card_Expiration_Month__c</fullName>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Card_Expiration_Year__c</fullName>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Card_Holder_Name__c</fullName>
        <label>Card Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Card_Last_4__c</fullName>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Card_Type__c</fullName>
        <label>Card Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Customer_Presence_Status__c</fullName>
        <label>Customer Presence Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cterminal__Device_Id__c</fullName>
        <label>Device Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Entry_Mode__c</fullName>
        <label>Entry Mode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Funding_Source__c</fullName>
        <label>Funding Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Needs_Reconciled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indexed field set by system to indicate that the payment is not related to any SObject when configuration has SObject Definitions configured.</inlineHelpText>
        <label>Needs Reconciled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cterminal__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cterminal__Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cterminal__Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Processor_Status__c</fullName>
        <label>Processor Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Processor__c</fullName>
        <label>Processor</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Related_Terminal_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Terminal Payment</label>
        <referenceTo>cterminal__Terminal_Payment__c</referenceTo>
        <relationshipLabel>Terminal Payments</relationshipLabel>
        <relationshipName>Terminal_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cterminal__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cterminal__Settled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Settled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cterminal__Signature_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cterminal__Status_Code__c</fullName>
        <label>Status Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Status__c</fullName>
        <label>Transaction Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Store_Id__c</fullName>
        <label>Store Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Store_Name__c</fullName>
        <label>Store Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cterminal__Terminal_Business__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Terminal Business</label>
        <referenceTo>cterminal__Terminal_Business__c</referenceTo>
        <relationshipLabel>Terminal Payments</relationshipLabel>
        <relationshipName>Terminal_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cterminal__Tip_Amount__c</fullName>
        <label>Tip Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cterminal__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cterminal__Transaction_Creation_Error__c</fullName>
        <label>Transaction Creation Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cterminal__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cterminal__Transaction_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cterminal__Updated_At__c</fullName>
        <inlineHelpText>The date time the transaction was last updated</inlineHelpText>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cterminal__Voided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voided</label>
        <type>Checkbox</type>
    </fields>
    <label>Terminal Payment</label>
    <listViews>
        <fullName>cterminal__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>cterminal__Action__c</columns>
        <columns>cterminal__Status__c</columns>
        <columns>cterminal__Response__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cterminal__Authorizations</fullName>
        <columns>NAME</columns>
        <columns>cterminal__Action__c</columns>
        <columns>cterminal__Status__c</columns>
        <columns>cterminal__Order_Amount__c</columns>
        <columns>cterminal__Store_Id__c</columns>
        <columns>cterminal__Transaction_Amount__c</columns>
        <columns>cterminal__Transaction_Id__c</columns>
        <columns>cterminal__Card_Type__c</columns>
        <columns>cterminal__Card_Last_4__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cterminal__Action__c</field>
            <operation>equals</operation>
            <value>AUTHORIZE</value>
        </filters>
        <label>Authorizations</label>
    </listViews>
    <listViews>
        <fullName>cterminal__Canceled</fullName>
        <columns>NAME</columns>
        <columns>cterminal__Reference_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cterminal__Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled</label>
    </listViews>
    <listViews>
        <fullName>cterminal__Refunds</fullName>
        <columns>NAME</columns>
        <columns>cterminal__Action__c</columns>
        <columns>cterminal__Status__c</columns>
        <columns>cterminal__Order_Amount__c</columns>
        <columns>cterminal__Store_Id__c</columns>
        <columns>cterminal__Transaction_Amount__c</columns>
        <columns>cterminal__Transaction_Id__c</columns>
        <columns>cterminal__Card_Type__c</columns>
        <columns>cterminal__Card_Last_4__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cterminal__Action__c</field>
            <operation>equals</operation>
            <value>REFUND</value>
        </filters>
        <label>Refunds</label>
    </listViews>
    <listViews>
        <fullName>cterminal__Successful</fullName>
        <columns>NAME</columns>
        <columns>cterminal__Action__c</columns>
        <columns>cterminal__Status__c</columns>
        <columns>cterminal__Order_Amount__c</columns>
        <columns>cterminal__Store_Id__c</columns>
        <columns>cterminal__Transaction_Amount__c</columns>
        <columns>cterminal__Transaction_Id__c</columns>
        <columns>cterminal__Card_Type__c</columns>
        <columns>cterminal__Card_Last_4__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Successful</label>
    </listViews>
    <nameField>
        <displayFormat>CTP{0000000}</displayFormat>
        <label>Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terminal Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>